tests/ui/rfcs/rfc-2632-const-trait-impl/specialization/default-keyword.stderr
error[E0049]: associated function `foo` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/default-keyword.rs:7:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Foo {
LL |     fn foo();
   |           - expected 0 const parameters

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0049`.
